# dcmfx

./: .gitignore  .releaserc.yml  README.md
.github/workflows/: release.yml  test.yml
docs/: acknowledgements.md  cli.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts
docs/src/: acknowledgements.md  conformance.md  design.md  index.md  introduction.md  license.md  roadmap.md
docs/src/libraries/: importing.md  overview.md
docs/src/tools/: cli.md  overview.md  playground.md  vs-code-extension.md
examples/: .rustfmt.toml  example.dcm.json  test_all.sh
examples/data_set_anonymize/gleam/: gleam.toml  manifest.toml
examples/data_set_anonymize/rust/: Cargo.toml
examples/dicom_json_read/gleam/: gleam.toml  manifest.toml
examples/dicom_json_read/rust/: Cargo.toml
examples/dicom_json_write/gleam/: gleam.toml  manifest.toml
examples/dicom_json_write/rust/: Cargo.toml
examples/dicom_read/gleam/: gleam.toml  manifest.toml
examples/dicom_read/rust/: Cargo.toml
examples/dicom_stream/gleam/: gleam.toml  manifest.toml
examples/dicom_stream/rust/: Cargo.toml
examples/dicom_wasm/: Cargo.toml  index.html
examples/dicom_wasm/src/: lib.rs
examples/dicom_write/gleam/: gleam.toml  manifest.toml
examples/dicom_write/rust/: Cargo.toml
examples/pixel_data_read/gleam/: gleam.toml  manifest.toml
examples/pixel_data_read/rust/: Cargo.toml
src/gleam/: test_all.sh
src/gleam/dcmfx_anonymize/: README.md  gleam.toml  manifest.toml
src/gleam/dcmfx_character_set/: README.md  gleam.toml  manifest.toml
src/gleam/dcmfx_cli/: README.md  gleam.toml  manifest.toml
src/gleam/dcmfx_core/: README.md  gleam.toml  manifest.toml
src/gleam/dcmfx_dictionary_codegen/: gleam.toml  manifest.toml
src/gleam/dcmfx_integration_tests/: README.md  gleam.toml  manifest.toml
src/gleam/dcmfx_json/: README.md  gleam.toml  manifest.toml
src/gleam/dcmfx_p10/: README.md  gleam.toml  manifest.toml
src/gleam/dcmfx_pixel_data/: README.md  gleam.toml  manifest.toml
src/gleam/dcmfx_registry_codegen/: gleam.toml  manifest.toml
src/rust/: .gitignore  .rustfmt.toml  Cargo.toml
src/rust/dcmfx/: Cargo.toml
src/rust/dcmfx/src/: integration_tests.rs  lib.rs
src/rust/dcmfx_anonymize/: Cargo.toml
src/rust/dcmfx_anonymize/src/: lib.rs
src/rust/dcmfx_character_set/: Cargo.toml
src/rust/dcmfx_character_set/src/: lib.rs
src/rust/dcmfx_character_set/src/internal/: gb_18030.rs  iso_8859_15.rs  iso_8859_2.rs  iso_8859_7.rs  iso_8859_8.rs  jis_x_0212.rs  ks_x_1001.rs  lookup_table_16bit.rs  lookup_table_8bit.rs  mod.rs  utf8.rs  utils.rs
src/rust/dcmfx_cli/: Cargo.toml
src/rust/dcmfx_cli/src/: main.rs
src/rust/dcmfx_cli/src/commands/: extract_pixel_data_command.rs  mod.rs  modify_command.rs  print_command.rs  to_dcm_command.rs  to_json_command.rs
src/rust/dcmfx_core/: Cargo.toml
src/rust/dcmfx_core/src/: code_strings.rs  data_element_tag.rs  data_element_value.rs  data_error.rs  data_set.rs  data_set_path.rs  dictionary.rs  error.rs  lib.rs  transfer_syntax.rs  utils.rs  value_multiplicity.rs  value_representation.rs
src/rust/dcmfx_core/src/data_element_value/: age_string.rs  date.rs  date_time.rs  decimal_string.rs  integer_string.rs  person_name.rs  time.rs  unique_identifier.rs
src/rust/dcmfx_core/src/data_set/: print.rs
src/rust/dcmfx_json/: Cargo.toml
src/rust/dcmfx_json/src/: json_config.rs  json_error.rs  lib.rs
src/rust/dcmfx_json/src/internal/: json_to_data_set.rs  mod.rs
src/rust/dcmfx_json/src/transforms/: mod.rs  p10_json_transform.rs
src/rust/dcmfx_p10/: Cargo.toml
src/rust/dcmfx_p10/src/: data_set_builder.rs  lib.rs  p10_error.rs  p10_part.rs  p10_read.rs  p10_write.rs  uids.rs
src/rust/dcmfx_p10/src/internal/: byte_stream.rs  data_element_header.rs  mod.rs  p10_location.rs  value_length.rs
src/rust/dcmfx_p10/src/transforms/: mod.rs  p10_filter_transform.rs  p10_insert_transform.rs  p10_print_transform.rs
src/rust/dcmfx_pixel_data/: Cargo.toml
src/rust/dcmfx_pixel_data/src/: lib.rs
src/rust/libs/dcmfx_anonymize/: Cargo.toml
src/rust/libs/dcmfx_anonymize/src/: lib.rs
src/rust/libs/dcmfx_character_set/: Cargo.toml
src/rust/libs/dcmfx_character_set/src/: lib.rs
src/rust/libs/dcmfx_character_set/src/internal/: character_set.rs  iso_8859_1.rs  iso_8859_11.rs  iso_8859_3.rs  iso_8859_4.rs  iso_8859_5.rs  iso_8859_6.rs  iso_8859_9.rs  iso_ir_6.rs  jis_x_0201.rs  jis_x_0208.rs  lookup_table_8bit.rs
src/rust/libs/dcmfx_core/: Cargo.toml
src/rust/libs/dcmfx_core/src/: code_strings.rs  data_element_tag.rs  data_element_value.rs  data_error.rs  data_set.rs  data_set_path.rs  error.rs  lib.rs  registry.rs  transfer_syntax.rs  value_representation.rs
src/rust/libs/dcmfx_core/src/data_element_value/: age_string.rs  attribute_tag.rs  date.rs  decimal_string.rs  integer_string.rs  time.rs
src/rust/libs/dcmfx_core/src/data_set/: print.rs
src/rust/libs/dcmfx_json/: Cargo.toml
src/rust/libs/dcmfx_json/src/: json_config.rs  lib.rs
src/rust/libs/dcmfx_json/src/internal/: json_to_data_set.rs
src/rust/libs/dcmfx_p10/: Cargo.toml
src/rust/libs/dcmfx_p10/src/: lib.rs  p10_error.rs  p10_part.rs  p10_read.rs  p10_write.rs  uids.rs
src/rust/libs/dcmfx_p10/src/internal/: data_element_header.rs  mod.rs  p10_location.rs
src/rust/libs/dcmfx_p10/src/transforms/: mod.rs  p10_filter_transform.rs  p10_insert_transform.rs  p10_print_transform.rs
src/rust/libs/dcmfx_pixel_data/: Cargo.toml
src/rust/libs/dcmfx_pixel_data/src/: lib.rs
test/assets/: .gitignore  README.md  dicom_to_json.py  requirements.txt
test/assets/fo-dicom/: CR-MONO1-10-chest.dcm.json  CR-MONO1-10-chest.dcm.printed  CR-ModalitySequenceLUT.dcm.json  CR-ModalitySequenceLUT.dcm.printed  CT-MONO2-16-ankle.dcm.json  CT-MONO2-16-ankle.dcm.printed  CT1_J2KI.dcm.json  CT1_J2KI.dcm.printed  DICOMDIR.dcm.json  DICOMDIR.dcm.printed  D_CLUNIE_CT1_RLE_FRAGS.dcm.json  D_CLUNIE_CT1_RLE_FRAGS.dcm.printed  ETIAM_video_002.dcm.printed  GH064.dcm.json  GH064.dcm.printed  GH1049_planar_1.dcm.printed  GH1146.dcm.json  GH1146.dcm.printed  (+60 more)
(+512 files in other folders)
