[package]
name = "dicom_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
dcmfx = { path = "../../src/rust/dcmfx" }
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"
image = "0.25"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
chrono = { version = "0.4", features = ["wasmbind"] }
js-sys = "0.3"
jpeg2k-sandboxed = "0.9.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false