[package]
name = "dcmfx"
description = "Library for working with DICOM and DICOM JSON"
categories = ["wasm"]

repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
dcmfx_anonymize = { path = "../dcmfx_anonymize", version = "0.0.0" }
dcmfx_character_set = { path = "../dcmfx_character_set", version = "0.0.0" }
dcmfx_core = { path = "../dcmfx_core", version = "0.0.0" }
dcmfx_json = { path = "../dcmfx_json", version = "0.0.0" }
dcmfx_p10 = { path = "../dcmfx_p10", version = "0.0.0" }
dcmfx_pixel_data = { path = "../dcmfx_pixel_data", version = "0.0.0" }

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
serde_json = "1.0.133"
walkdir = "2.5.0"
