[package]
name = "dcmfx_anonymize"
description = "DCMfx anonymize library"

repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
dcmfx_core = { path = "../dcmfx_core", version = "0.0.0" }
