[package]
name = "dcmfx_cli"
version = "0.0.0"
description = "DCMfx CLI tool"
license = "AGPL-3.0-only"
repository = "https://github.com/dcmfx/dcmfx"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive", "wrap_help"] }
dcmfx = { path = "../dcmfx" }
flate2 = { version = "1.0.34", features = ["zlib-ng"], default-features = false }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.159"

[package.metadata.cargo-machete]
ignored = ["flate2"]
