[package]
name = "dcmfx_cli"
description = "DCMfx CLI tool"
categories = ["command-line-utilities"]

repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
clap = { version = "4.5.23", features = ["derive", "wrap_help"] }
dcmfx = { path = "../dcmfx", version = "0.0.0" }
flate2 = { version = "1.0.35", features = ["zlib-ng"], default-features = false }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.167"

[package.metadata.cargo-machete]
ignored = ["flate2"]
