[package]
name = "dcmfx_json"
description = "DCMfx JSON library"

repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
dcmfx_core = { path = "../dcmfx_core", version = "0.0.0" }
dcmfx_p10 = { path = "../dcmfx_p10", version = "0.0.0" }
num-traits = "0.2.19"
serde = { version = "1.0.215", features = ["serde_derive"]}
serde_json = { version = "1.0.133", features = ["float_roundtrip"] }
