[package]
name = "dcmfx_p10"
description = "DCMfx Part 10 library"

repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
byteorder = "1.5.0"
dcmfx_character_set = { path = "../dcmfx_character_set", version = "0.0.0" }
dcmfx_core = { path = "../dcmfx_core", version = "0.0.0" }
flate2 = "1.0.35"
