[package]
name = "dcmfx_core"
edition = "2021"
rust-version = "1.80"

[dependencies]
byteorder = "1.5.0"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
rand = "0.8.5"
regex = "1.11.1"
supports-color = "3.0.1"
unicode-segmentation = "1.12.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
terminal_size = "0.4.0"
